--- a/src/exercise/01.html
+++ b/src/exercise/01.html
@@ -19,13 +19,16 @@
 <!--   📜 https://developer.mozilla.org/en-US/docs/Web/API/ParentNode/append -->
 
 <body>
-    <div id="root"></div>
     <script type="module">
-        const rootElement = document.getElementById('root');
+        const rootElement = document.createElement('div')
         const element = document.createElement('div');
-
+        
+        rootElement.id = "root";
+        rootElement.className = "container";
         element.textContent = 'Hello World';
         element.className = 'container';
+
+        document.body.append(rootElement);
         rootElement.append(element);
     </script>
 </body>
