Exercise 3 extra credit 1

--- a/src/exercise/03.html
+++ b/src/exercise/03.html
@@ -21,8 +21,9 @@
     //   className: 'container',
     //   children: 'Hello World',
     // })
-
-    const element = <div className="container">Hello World</div>
+    const elementClass = 'container'
+    const elementChildren = 'Hello World'
+    const element = <div className={elementClass}>{elementChildren}</div>
 
     // 💰 there are a few subtle differences between JSX and HTML. One such
     // difference is how you apply a class to an element in JSX is by using
