--- a/src/exercise/04.html
+++ b/src/exercise/04.html
@@ -8,16 +8,33 @@
   <script src="https://unpkg.com/@babel/standalone@7.12.4/babel.js"></script>
   <script type="text/babel">
     // 🐨 Make a function called `message` which returns the JSX we want to share
-    function Message({children}) {
-      return <div className="message">{children}</div>
+    function Message({subject, greetings}) {
+      return (
+        <div className="message">
+          {greetings}, {subject}
+        </div>
+      )
+    }
+
+    const PropTypes = {
+      string(props, propName, componentName) {
+        if (typeof props[propName] !== 'string') {
+          return new Error('Greeting is not a string.')
+        }
+      },
+    }
+
+    Message.propTypes = {
+      greetings: PropTypes.string,
+      subject: PropTypes.string,
     }
 
     // 🐨 use that function in place of the divs below with:
     // 💰 {message({children: 'Hello World'})} {message({children: 'Goodbye World'})}
     const element = (
       <div className="container">
-        <Message>Hello World</Message>
-        <Message>Goodbye World</Message>
+        <Message greetings="Hello" subject="World" />
+        <Message greetings="Goodbye" subject="World" />
       </div>
     )
 
