--- a/src/exercise/04.html
+++ b/src/exercise/04.html
@@ -6,6 +6,7 @@
   <script src="https://unpkg.com/react@18.1.0/umd/react.development.js"></script>
   <script src="https://unpkg.com/react-dom@18.1.0/umd/react-dom.development.js"></script>
   <script src="https://unpkg.com/@babel/standalone@7.12.4/babel.js"></script>
+  <script src="https://unpkg.com/prop-types@15.7.2/prop-types.js"></script>
   <script type="text/babel">
     // 🐨 Make a function called `message` which returns the JSX we want to share
     function Message({subject, greetings}) {
@@ -16,17 +17,9 @@
       )
     }
 
-    const PropTypes = {
-      string(props, propName, componentName) {
-        if (typeof props[propName] !== 'string') {
-          return new Error('Greeting is not a string.')
-        }
-      },
-    }
-
     Message.propTypes = {
-      greetings: PropTypes.string,
-      subject: PropTypes.string,
+      greetings: PropTypes.string.isRequired,
+      subject: PropTypes.string.isRequired,
     }
 
     // 🐨 use that function in place of the divs below with:
